--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="adress__wrapper">
         <section class="page-header__adress">
           <div class="page-header__logo">
-            <img class="logo-image" src="img/logo.svg" width="171" height="46" alt="Logo">
+            <img class="logo-image" src="img/logo.png" width="171" height="46" alt="Logo">
             <div class="logo__adress">г. Вологда</div>
           </div>
           <div class="page-header__contacts">
