--- a/index.html
+++ b/index.html
@@ -108,33 +108,34 @@
           <a href="#">Лидеры по квотам ЭКО по ОМС</a>
         </li>
       </ul>
-
+    <div class="sub-nav-wrapper">
       <ul class="sub-nav__list">
         <li class="sub-nav__item">
-          <img class="sub-nav__image" src="img/1.png" width="280" height="160" alt="Фото">
+          <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
           <a class="sub-nav__link" href="#">Диагностика бесплодия</a>
         </li>
         <li class="sub-nav__item sub-nav__item--active">
-          <img class="sub-nav__image" src="img/2.png" width="280" height="160" alt="Фото">
+          <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
           <a class="sub-nav__link" href="#">Популярные программы ЭКО</a>
         </li>
         <li class="sub-nav__item">
-          <img class="sub-nav__image" src="img/3.png" width="280" height="160" alt="Фото">
+          <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
           <a class="sub-nav__link" href="#">Донорские программы</a>
         </li>
         <li class="sub-nav__item">
-            <img class="sub-nav__image" src="img/4.png" width="280" height="160" alt="Фото">
+            <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
           <a class="sub-nav__link" href="#">Суррогатное материнство</a>
         </li>
         <li class="sub-nav__item">
-          <img class="sub-nav__image" src="img/5.png" width="280" height="160" alt="Фото">
+          <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
           <a class="sub-nav__link" href="#">Генетические анализы</a>
         </li>
         <li class="sub-nav__item">
-          <img class="sub-nav__image" src="img/6.png" width="280" height="160" alt="Фото">
+          <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
           <a class="sub-nav__link" href="#">Прочее</a>
         </li>
       </ul>
+    </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
