--- a/index.html
+++ b/index.html
@@ -2,144 +2,359 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Test-eko</title>
+    <title>SweetMom</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
-      <div class="adress__wrapper">
-        <section class="page-header__adress">
-          <div class="page-header__logo">
-            <img class="logo-image" src="img/logo.png" width="171" height="46" alt="Logo">
-            <div class="logo__adress">г. Вологда</div>
-          </div>
-          <div class="page-header__contacts">
-            <div class="contacts__adress">
-              <span class="contacts__adress--light">Адрес:</span> г. Вологда, ул. Воровского 32
-            </div>
-            <div class="contacts__schedule">
-              <span class="contacts__adress--light">График работы:</span>
-               <span class="contacts__schedule--light">пн-пт:</span> 9.00-21.00
-               <span class="contacts__schedule--light">сб-вс:</span> 9.00-18.00
-            </div>
-          </div>
-          <div class="page-header__phone">
-            <a class="phone__link" href="tel:+74993908712">+7 (499) 390-87-12</a>
-            <button type="button" class="phone__sign-up">Записаться на приём</button>
-          </div>
-        </section>
-      </div>
+      <div class="page-header__wrapper">
+      <a class="page-header__logo" href="index.html">
+        <img class="logo-image" src="img/logo.svg" width="197" height="70" alt="Logo">
+      </a>
       <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs">
         <div class="nav__wrapper">
-        <button class="main-nav__toggle" type="button"></button>
+          <button class="main-nav__toggle" type="button"></button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="#">О клинике</a>
+              <a href="#about-us">О нас</a>
             </li>
             <li class="site-list__item site-list__item--active">
-              <a href="#">Врачи</a>
+              <a href="#pay">Выплаты</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Услуги и цены</a>
+              <a href="#plus">Требования</a>
             </li>
             <li class="site-list__item">
-              <a href="#">ЭКО по ОМС</a>
+              <a href="#project">Программа</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Акции</a>
+              <a href="#reviews">Отзывы</a>
             </li>
             <li class="site-list__item">
-              <a href="#">Контакты</a>
+              <a href="#contacts">Контакты</a>
+            </li>
+            <li class="site-list__item site-list__item--phone">
+              <a class="site-list__phone" href="tel:+74952155544"><span>+7 (495) 215-55-44</span></a>
             </li>
           </ul>
-          </div>
+        </div>
       </nav>
+      <a class="page-header__link" href="#feedback"><span>Оставить заявку</span></a>
+      </div>
     </header>
+
+    <div class="page-logo__wrapper">
+      <a class="page-header__logo page-main__logo" href="index.html">
+        <img class="logo-image" src="img/logo.svg" width="197" height="70" alt="Logo">
+      </a>
+    </div>
+
     <main class="page-main">
-      <div class="slider-wrapper">
-      <div id="slider" class="slider">
-        <ol class="slider__indicators">
-          <li class="slider__indicator slider__indicator_active" data-slide-to="0"></li>
-          <li class="slider__indicator" data-slide-to="1"></li>
-          <li class="slider__indicator" data-slide-to="2"></li>
-        </ol>
-        <div class="slider__items">
-          <div class="slider__item slider__item_active">
-            <img class="page-header__logo-image" src="img/index_slider1.jpg" width="" height="" alt="Слайдер-фото">
+
+      <h1 class="visually-hidden">
+        Суррогатное материнство
+      </h1>
+
+      <section class="cutaway">
+        <div class="cutaway__title">
+          Суррогатное материнство
+        </div>
+        <div class="cutaway__description">
+          «Дарить счастье и зарабатывать - легко!»
+        </div>
+        <a class="cutaway__button" href="#feedback">
+          Записаться на приём
+        </a>
+      </section>
+
+      <section class="about-us">
+        <h2 class="visually-hidden">
+          О нас
+        </h2>
+        <a class="page-main__title about-us__title" id="about-us">
+          О нас
+        </a>
+        <div class="about-us__description-first">
+          Наша репутация. Гарантия результата. Работа «Под ключ».
+        </div>
+        <div class="about-us__description-second">
+          Мы работаем в области суррогатного материнства более 15 лет. За это время из небольшой юридической
+          компании мы выросли в многопрофильный холдинг, работающий в сфере вспомогательных репродуктивных
+          технологий в России. Сотни бесплодных семейных пар стали счастливыми родителями с помощью наших
+          программ суррогатного материнства.
+        </div>
+      </section>
+
+      <section class="pay">
+        <h2 class="visually-hidden">
+          Выплаты и вознаграждения
+        </h2>
+        <a class="page-main__title pay__title" id="pay">
+          Выплаты и вознаграждения
+        </a>
+        <img class="pay__image" src="img/icons_girls_preg.png" alt="логотип компании">
+        <div class="pay__extra">
+          <span>Дополнительные выплаты</span>
+          за
+          <span>кесарево</span>
+          и
+          <span>двойню</span>
+        </div>
+      </section>
+
+      <section class="plus">
+        <h2 class="visually-hidden">
+          Преимущества
+        </h2>
+        <a class="page-main__title plus__title" id="plus">
+          Преимущества
+        </a>
+        <ul class="plus__list">
+          <li class="plus__item">
+            <img class="plus__image" src="img/1.png" alt="">
+            <div class="plus__description">
+              Моментальное вступление в программу
+            </div>
+          </li>
+          <li class="plus__item">
+            <img class="plus__image" src="img/2.png" alt="">
+            <div class="plus__description">
+              Резус фактор любой<br>
+              <span>(положительный и отрицательный)</span>
+            </div>
+          </li>
+          <li class="plus__item">
+            <img class="plus__image" src="img/3.png" alt="">
+            <div class="plus__description">
+              Можно с одним кесарево
+            </div>
+          </li>
+        </ul>
+        <a class="page-main__title plus__title">
+          Требования
+        </a>
+        <ul class="plus__list">
+          <li class="plus__item">
+            <img class="plus__image" src="img/1-1.png" alt="">
+            <div class="plus__description">
+              Возраст от 20 до 35 лет
+            </div>
+          </li>
+          <li class="plus__item">
+            <img class="plus__image" src="img/2-2.png" alt="">
+            <div class="plus__description">
+              Физическое и психическое здоровье
+            </div>
+          </li>
+          <li class="plus__item">
+            <img class="plus__image" src="img/3-3.png" alt="">
+            <div class="plus__description">
+              Один здоровый ребенок
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section class="project">
+        <h2 class="visually-hidden">
+          Программы
+        </h2>
+        <a class="page-main__title project__title" id="project">
+          Программы
+        </a>
+        <div class="project__cards">
+          <div class="project__card__block-first">
+          <div class="project__card project__card-first">
+            <h3 class="project__card-title">
+              Программа 1
+            </h3>
+            <div class="project__card-description">
+              Программа для жительниц всех регионов России. Для кандидаток, желающих пройти программу в городе Москва.
+            </div>
           </div>
-          <div class="slider__item">
-            <img class="page-header__logo-image" src="img/index_slider2.jpg" width="" height="" alt="Слайдер-фото">
+          <div class="project__card project__card-second">
+            <h3 class="project__card-title">
+              Программа 2
+            </h3>
+            <div class="project__card-description">
+              Программа для Кандидаток, проживающих в городе Москва
+              и в ближайшем Подмосковье
+              (имеющих регистрацию по месту жительства в этих районах).
+            </div>
           </div>
-          <div class="slider__item">
-            <img class="page-header__logo-image" src="img/index_slider3.jpg" width="" height="" alt="Слайдер-фото">
+          </div>
+          <div class="project__card__block-second">
+          <div class="project__card project__card-third">
+            <h3 class="project__card-title">
+              Программа 3
+            </h3>
+            <div class="project__card-description">
+              Данная программа предназначена для женщин, уже имеющих удачный опыт участия в программе
+              "Суррогатное материнство".
+              Финансовые условия повторного участия в программе обсуждаются с каждой Кандидаткой отдельно.
+            </div>
+          </div>
+          <div class="project__card project__card-fourth">
+            <h3 class="project__card-title">
+              Программа 4
+            </h3>
+            <div class="project__card-description">
+              Программа для жительниц всех регионов России. Для кандидаток, желающих пройти программу
+              в регионах до 30 недели
+              беременности.
+            </div>
+          </div>
           </div>
         </div>
-        <a class="slider__control slider__control_prev" href="#" role="button"></a>
-        <a class="slider__control slider__control_next" href="#" role="button"></a>
-      </div>
-     </div>
-      <ul class="bread-crumbs">
-        <li class="bread-crumbs__item">
-          <a href="#">
-            <span class="bread-crumbs__orange">15</span>
-             лет опыта
-           </a>
-        </li>
-        <li class="bread-crumbs__item">
-          <a href="#">
-            <span class="bread-crumbs__orange">62.8%</span>
-             результативности
-           </a>
-        </li>
-        <li class="bread-crumbs__item">
-          <a href="#">
-            <span class="bread-crumbs__orange">31</span>
-             клиника в РФ
-           </a>
-        </li>
-        <li class="bread-crumbs__item">
-          <a href="#">
-            <span class="bread-crumbs__orange">>4500</span>
-             родились благодаря нашим клиникам
-           </a>
-        </li>
-        <li class="bread-crumbs__item">
-          <a href="#">Лидеры по квотам ЭКО по ОМС</a>
-        </li>
-      </ul>
-    <div class="sub-nav-wrapper">
-      <ul class="sub-nav__list">
-        <li class="sub-nav__item">
-          <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
-          <a class="sub-nav__link" href="#">Диагностика бесплодия</a>
-        </li>
-        <li class="sub-nav__item sub-nav__item--active">
-          <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
-          <a class="sub-nav__link" href="#">Популярные программы ЭКО</a>
-        </li>
-        <li class="sub-nav__item">
-          <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
-          <a class="sub-nav__link" href="#">Донорские программы</a>
-        </li>
-        <li class="sub-nav__item">
-            <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
-          <a class="sub-nav__link" href="#">Суррогатное материнство</a>
-        </li>
-        <li class="sub-nav__item">
-          <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
-          <a class="sub-nav__link" href="#">Генетические анализы</a>
-        </li>
-        <li class="sub-nav__item">
-          <img class="sub-nav__image" src="img/menu.jpg" alt="Фото">
-          <a class="sub-nav__link" href="#">Прочее</a>
-        </li>
-      </ul>
-    </div>
-    </main>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/nav.js"></script>
+      </section>
 
+      <section class="sweetmom">
+        <h2 class="visually-hidden">
+          #ясвитмама
+        </h2>
+        <div class="sweetmom__title">
+          <span>#</span>я<span>свит</span>мама
+        </div>
+        <div class="sweetmom__description">
+          Стань свитмамой и получи<br><span>1 000 000</span> рублей
+        </div>
+      </section>
+
+      <section class="reviews">
+        <h2 class="visually-hidden">
+          Отзывы
+        </h2>
+        <a class="page-main__title reviews__title" id="reviews">
+            Отзывы
+        </a>
+        <div class="reviews__cards">
+          <div class="reviews__card">
+            <div class="reviews__card-top">
+              <img class="plus__image" src="img/face3.png" alt="">
+              <div class="reviews__card-name">
+                О.В
+              </div>
+            </div>
+            <div class="reviews__card-bottom">
+              <div class="reviews__card-content">
+                "Хочу поблагодарить коллектив "Свитчайлд", в частности Юлию Олеговну Бигель, куратора, водителей, за хорошее отношение, внимание и терпение.
+Очень рада, что смогла принять участие в программе, и помочь одной из семей стать счастливыми родителями..."
+              </div>
+              <div class="reviews__card-comment">
+                  20.08.2019 г.
+              </div>
+            </div>
+          </div>
+          <div class="reviews__card">
+            <div class="reviews__card-top">
+              <img class="plus__image" src="img/face2.png" alt="">
+              <div class="reviews__card-name">
+                (сур.мама К.)
+              </div>
+            </div>
+            <div class="reviews__card-bottom">
+              <div class="reviews__card-content">
+              "Теперь я - счастливая сурмама! Только недавно приехала домой после родов и хотела бы высказать свою благодарность Юлие Олеговне, кураторам "Свитчайлд", водителям и психологу, а также врачу, который принимал роды. Вы - лучшие!!!..."
+              </div>
+              <div class="reviews__card-comment">
+                  09.07.2018 г.
+              </div>
+            </div>
+          </div>
+          <div class="reviews__card">
+            <div class="reviews__card-top">
+              <img class="plus__image" src="img/face1.png" alt="">
+              <div class="reviews__card-name">
+                К.М
+              </div>
+            </div>
+            <div class="reviews__card-bottom">
+              <div class="reviews__card-content">
+                Выражаю огромную благодарность коллективу "Свитчайлд" - за понимание, терпении и заботу. Также хотелось бы сказать отдельное спасибо Юлие Олеговне Бигель - она всегда была рядом, поддерживала и помогала. Большое всем спасибо, вы делаете очень хорошее дело..."
+              </div>
+              <div class="reviews__card-comment">
+                  30.05.2018 г.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="contacts">
+        <h2 class="visually-hidden">
+          Контакты
+        </h2>
+        <a class="page-main__title contacts__title" id="contacts">
+          Контакты
+        </a>
+        <div class="contacts__items">
+          <div class="contacts__item-phone">
+            <div class="contacts__name">
+              Телефон:
+            </div>
+            <a class="contacts__phone" href="tel:+74952155544">+7 (495) 215-55-44</a>
+          </div>
+          <div class="contacts__item">
+            <div class="contacts__item-adress">
+              <div class="contacts__adress-top">
+                Адрес:
+              </div>
+              <div class="contacts__adress">
+                Москва, Ул. Аргуновская, 3 кор. 1
+              </div>
+            </div>
+            <div class="contacts__item-mail">
+              <div class="contacts__mail-top">
+                Почта:
+              </div>
+              <a class="contacts__mail" href="mailto:bigel@sweetgroup.ru">bigel@sweetgroup.ru</a>
+            </div>
+          </div>
+        </div>
+        <div class="contacts__map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d560.425751372019!2d37.61976761770637!3d55.81575625954374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5360b7fc3deb5%3A0x7c12e38124a26ad!2z0JrQu9C40L3QuNC60LAg0KbQtdC90YLRgCDQrdCa0J4!5e0!3m2!1sru!2sru!4v1568116457053!5m2!1sru!2sru" width="" height="" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+      </section>
+
+      <section class="feedback">
+        <h2 class="visually-hidden">
+          Оставить заявку
+        </h2>
+        <a class="page-main__title feedback__title" id="feedback">
+          Оставить заявку
+        </a>
+        <form class="feedback__form" action="#" method="post">
+          <div class="feedback__contacts">
+            <div class="feedback__name">
+              <label for="surname"></label>
+              <input class="feedback__name-input" id="surname" type="text" name="surname" value="" placeholder="Как Вас зовут?">
+            </div>
+            <div class="feedback__email">
+              <label for="user-email"></label>
+              <input class="feedback__email-input" id="user-email" type="email" name="email" value="" placeholder="Ваша электронная почта">
+            </div>
+            <div class="feedback__tel">
+              <label for="user-tel"></label>
+              <input class="feedback__tel-input" id="user-tel" type="tel" name="telephone" value="" placeholder="Номер телефона">
+            </div>
+          </div>
+          <div class="feedback__checkbox">
+            <input class="feedback__checkbox-input" type="checkbox" name="consent" id="consent" checked>
+            <label for="consent">Я даю согласие на обработку своих
+              <a class="feedback__link" href="img/Polozhenie_ob_obrabotke_pers_dannyh.pdf">персональных данных</a>
+              .</label>
+          </div>
+          <button class="feedback__button" type="submit">Записаться на приём</button>
+        </form>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__copyright">
+        © Все права защищены. 2007-2019 г.
+      </div>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/nav.js"></script>
   </body>
 </html>
