--- a/index.html
+++ b/index.html
@@ -356,5 +356,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/nav.js"></script>
+    <script src="js/page-scroller-button.js"></script>
   </body>
 </html>
