--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <li class="site-list__item">
               <a href="#plus">Требования</a>
             </li>
-            <li class="site-list__item">
+            <!-- <li class="site-list__item">
               <a href="#project">Программа</a>
-            </li>
+            </li> -->
             <li class="site-list__item">
               <a href="#reviews">Отзывы</a>
             </li>
@@ -156,7 +156,7 @@
         </ul>
       </section>
 
-      <section class="project">
+      <!-- <section class="project">
         <h2 class="visually-hidden">
           Программы
         </h2>
@@ -207,7 +207,7 @@
           </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="sweetmom">
         <h2 class="visually-hidden">
@@ -217,7 +217,7 @@
           <span>#</span>я<span>свит</span>мама
         </div>
         <div class="sweetmom__description">
-          Стань свитмамой и получи<br><span>1 000 000</span> рублей
+          Стань свитмамой и получи<br><span>1 200 000</span> рублей
         </div>
       </section>
 
