--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>SweetMom</title>
+    <title>Суррогатное материнство. Дарить счастье и зарабатывать - легко!</title>
+    <meta name="keywords" content="как стать суррогатной мамой, сколько платят суррогатной маме, стану суррогатной мамой, хочу стать суррогатной мамой, стать суррогатной мамой, объявления стану суррогатной мамой, стану сурмамой, стану суррогатной матерью, хочу стать суррогатной матерью, сколько платят суррогатной матери, как стать суррогатной матерью, как стать донором яйцеклетки, донор яйцеклетки, стану донором яйцеклетки, стать донором ооцитов">
+    <meta name="description" content="На сайте можно узнать, как стать суррогатной мамой. Если вы   хотите стать суррогатной мамой, вы можете заполнить и отправить анкету   сурмамы.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -25,9 +27,6 @@
             <li class="site-list__item">
               <a href="#plus">Требования</a>
             </li>
-            <!-- <li class="site-list__item">
-              <a href="#project">Программа</a>
-            </li> -->
             <li class="site-list__item">
               <a href="#reviews">Отзывы</a>
             </li>
@@ -43,19 +42,15 @@
       <a class="page-header__link" href="#feedback"><span>Оставить заявку</span></a>
       </div>
     </header>
-
     <div class="page-logo__wrapper">
       <a class="page-header__logo page-main__logo" href="index.html">
         <img class="logo-image" src="img/logo.svg" width="197" height="70" alt="Logo">
       </a>
     </div>
-
     <main class="page-main">
-
       <h1 class="visually-hidden">
         Суррогатное материнство
       </h1>
-
       <section class="cutaway">
         <div class="cutaway__title">
           Суррогатное материнство
@@ -67,7 +62,6 @@
           Записаться на приём
         </a>
       </section>
-
       <section class="about-us">
         <h2 class="visually-hidden">
           О нас
@@ -85,7 +79,6 @@
           программ суррогатного материнства.
         </div>
       </section>
-
       <section class="pay">
         <h2 class="visually-hidden">
           Выплаты и вознаграждения
@@ -102,7 +95,6 @@
           <span>двойню</span>
         </div>
       </section>
-
       <section class="plus">
         <h2 class="visually-hidden">
           Преимущества
@@ -155,60 +147,6 @@
           </li>
         </ul>
       </section>
-
-      <!-- <section class="project">
-        <h2 class="visually-hidden">
-          Программы
-        </h2>
-        <a class="page-main__title project__title" id="project">
-          Программы
-        </a>
-        <div class="project__cards">
-          <div class="project__card__block-first">
-          <div class="project__card project__card-first">
-            <h3 class="project__card-title">
-              Программа 1
-            </h3>
-            <div class="project__card-description">
-              Программа для жительниц всех регионов России. Для кандидаток, желающих пройти программу в городе Москва.
-            </div>
-          </div>
-          <div class="project__card project__card-second">
-            <h3 class="project__card-title">
-              Программа 2
-            </h3>
-            <div class="project__card-description">
-              Программа для Кандидаток, проживающих в городе Москва
-              и в ближайшем Подмосковье
-              (имеющих регистрацию по месту жительства в этих районах).
-            </div>
-          </div>
-          </div>
-          <div class="project__card__block-second">
-          <div class="project__card project__card-third">
-            <h3 class="project__card-title">
-              Программа 3
-            </h3>
-            <div class="project__card-description">
-              Данная программа предназначена для женщин, уже имеющих удачный опыт участия в программе
-              "Суррогатное материнство".
-              Финансовые условия повторного участия в программе обсуждаются с каждой Кандидаткой отдельно.
-            </div>
-          </div>
-          <div class="project__card project__card-fourth">
-            <h3 class="project__card-title">
-              Программа 4
-            </h3>
-            <div class="project__card-description">
-              Программа для жительниц всех регионов России. Для кандидаток, желающих пройти программу
-              в регионах до 30 недели
-              беременности.
-            </div>
-          </div>
-          </div>
-        </div>
-      </section> -->
-
       <section class="sweetmom">
         <h2 class="visually-hidden">
           #ясвитмама
@@ -220,7 +158,6 @@
           Стань свитмамой и получи<br><span>1 200 000</span> рублей
         </div>
       </section>
-
       <section class="reviews">
         <h2 class="visually-hidden">
           Отзывы
@@ -280,7 +217,6 @@
           </div>
         </div>
       </section>
-
       <section class="contacts">
         <h2 class="visually-hidden">
           Контакты
@@ -316,7 +252,6 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d560.425751372019!2d37.61976761770637!3d55.81575625954374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5360b7fc3deb5%3A0x7c12e38124a26ad!2z0JrQu9C40L3QuNC60LAg0KbQtdC90YLRgCDQrdCa0J4!5e0!3m2!1sru!2sru!4v1568116457053!5m2!1sru!2sru" width="" height="" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
       </section>
-
       <section class="feedback">
         <h2 class="visually-hidden">
           Оставить заявку
@@ -324,7 +259,8 @@
         <a class="page-main__title feedback__title" id="feedback">
           Оставить заявку
         </a>
-        <form class="feedback__form" action="#" method="post">
+        <!-- <form id="wdh_form" class="feedback__form" action="mailto:gurovg@gmail.com" enctype="text/plain"> -->
+        <form id="wdh_form" class="feedback__form" action="mail.php" method="POST">
           <div class="feedback__contacts">
             <div class="feedback__name">
               <label for="surname"></label>
