--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-<!doctype html><html lang="ru"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="description" content="Проведение опросов и визуализация результатов"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Система диагностик</title><link href="/static/css/main.e774c4b9.chunk.css" rel="stylesheet"></head><body><noscript>Вам необходимо включить JavaScript для запуска этого приложения.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,l,i=t[0],f=t[1],a=t[2],p=0,s=[];p<i.length;p++)l=i[p],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in f)Object.prototype.hasOwnProperty.call(f,n)&&(e[n]=f[n]);for(c&&c(t);s.length;)s.shift()();return u.push.apply(u,a||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,i=1;i<r.length;i++){var f=r[i];0!==o[f]&&(n=!1)}n&&(u.splice(t--,1),e=l(l.s=r[0]))}return e}var n={},o={1:0},u=[];function l(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=e,l.c=n,l.d=function(e,t,r){l.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,t){if(1&t&&(e=l(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(l.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)l.d(r,n,function(t){return e[t]}.bind(null,n));return r},l.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(t,"a",t),t},l.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},l.p="/";var i=this.webpackJsonpclient=this.webpackJsonpclient||[],f=i.push.bind(i);i.push=t,i=i.slice();for(var a=0;a<i.length;a++)t(i[a]);var c=f;r()}([])</script><script src="/static/js/2.2fda75a6.chunk.js"></script><script src="/static/js/main.2122ba43.chunk.js"></script></body></html>
+<div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- <form class="form" onsubmit="send(this)">
+    <div>
+      <label>Введите Ваши Ф.И.О.
+        <input type="text" required />
+      </label>
+      <label>Ваш номер телефона
+        <input type="tel" required />
+      </label>
+      <label>Ваш адрес электронной почты
+        <input type="email" required />
+      </label>
+     </div>
+  </form>
+  <button class="form-btn" type="submit">Отправить</button> -->
+      <!-- <script>
+        const btn = document.querySelector('.form-btn')
+        const form = document.querySelector('.form')
+
+        btn.addEventListener('click', () => {
+          console.log(form);
+        })
+      </script> -->
+
+
+      <form class="feedback__form">
+        <input type="hidden" name="project_name" value="Бронирование мест">
+        <input type="hidden" name="admin_email" value="gurovum@apkpro.ru">
+        <input type="hidden" name="form_subject" value="Form Subject">
+        <div class="feedback__contacts">
+          <div class="feedback__name">
+            <label for="surname"></label>
+            <input class="feedback__name-input" id="surname" type="text" name="Name" value="" placeholder="Как Вас зовут?"
+              required>
+          </div>
+          <div class="feedback__email">
+            <label for="user-email"></label>
+            <input class="feedback__email-input" id="user-email" type="email" name="E-mail" value=""
+              placeholder="Ваша электронная почта" required>
+          </div>
+          <div class="feedback__tel">
+            <label for="user-tel"></label>
+            <input class="feedback__tel-input" id="user-tel" type="tel" name="Phone" value="" placeholder="Номер телефона"
+              required>
+          </div>
+        </div>
+        <!-- <div class="feedback__checkbox">
+          <input class="feedback__checkbox-input" type="checkbox" name="consent" id="consent" checked>
+          <label for="consent">Я даю согласие на обработку своих
+            <a class="feedback__link" href="img/Polozhenie_ob_obrabotke_pers_dannyh.pdf">персональных данных</a>
+            .</label>
+        </div> -->
+        <button class="feedback__button" type="submit">Записаться на приём</button>
+      </form>
+
+
+    <script>
+      $(document).ready(function () {
+
+          //E-mail Ajax Send
+          $("form").submit(function () { //Change
+            var th = $(this);
+            $.ajax({
+              type: "POST",
+              url: "mail.php", //Change
+              data: th.serialize()
+            }).done(function () {
+              alert("Ваша заявка принята!");
+              setTimeout(function () {
+                // Done Functions
+                th.trigger("reset");
+              }, 1000);
+            });
+            return false;
+          });
+
+        });
+    </script>
+
+</div>
