--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <div class="container">
       <div class="train-wrap">
-        <img class="train" src="img/train-long.svg" alt="train">
+        <img class="train" src="img/train.svg" alt="train">
+      </div>
+      <div class="rail-wrap">
+        <img class="train" src="img/rail.svg" alt="train">
       </div>
     </div>
     <script src="js/common.js"></script>
